--- a/home.html
+++ b/home.html
@@ -163,11 +163,10 @@
             <p><b>Hobbies:</b> Drawing, watching movies, singing</p>
             <p><b>Disability:</b> Deaf</p>
             <ul><b>Means of communication:</b>
-              <li>I prefer using a screenreader</li>
-              <li>I prefer increased color contrast</li>
+              <li>I prefer large texts</li>
             </ul>
-            <p><b>Preferred Mode of Contact: </b> Stay Online</p>
-            <p><b>Access Needs: </b> I use an interpreter</p>
+            <p><b>Preferred Mode of Contact: </b> Meet in Person</p>
+            <p><b>Access Needs: </b> I use a magnifier</p>
             <p><b>Introduction:</b> Hello! I'm Eric, an 18-year-old art enthusiast and nature lover. Being deaf has taught me to see the world differently, and I express my perspective through painting and drawing. I'm a tech-savvy dreamer, always diving into the latest gadgets and fantasy novels. Excited to connect here, I look forward to sharing stories and building friendships in our unique community!</p>
           </div>
 
@@ -190,10 +189,10 @@
             <p><b>Disability:</b> Deaf</p>
             <ul><b>Means of communication:</b>
               <li>I prefer using a screenreader</li>
-              <li>I prefer increased color contrast</li>
+              <li>I prefer audio communication</li>
             </ul>
             <p><b>Preferred Mode of Contact: </b> Stay Online</p>
-            <p><b>Access Needs: </b> I use an interpreter</p>
+            <p><b>Access Needs: </b> N/A</p>
             <p><b>Introduction:</b> Hello! I'm Eric, an 18-year-old art enthusiast and nature lover. Being deaf has taught me to see the world differently, and I express my perspective through painting and drawing. I'm a tech-savvy dreamer, always diving into the latest gadgets and fantasy novels. Excited to connect here, I look forward to sharing stories and building friendships in our unique community!</p>
           </div>
 
@@ -215,8 +214,7 @@
             <p><b>Hobbies:</b> Drawing, watching movies, singing</p>
             <p><b>Disability:</b> Deaf</p>
             <ul><b>Means of communication:</b>
-              <li>I prefer using a screenreader</li>
-              <li>I prefer increased color contrast</li>
+              <li>I prefer reduced motion</li>
             </ul>
             <p><b>Preferred Mode of Contact: </b> Stay Online</p>
             <p><b>Access Needs: </b> I use an interpreter</p>
