made changes to files

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
             <title> Landing Page</title>
             <link rel="stylesheet" href="style.css"
             <body>
-                <img src = "logo.png"></img>
+                <img src = "logo.png" alt="PalPalette Logo"></img>
                 <header> <center> PalPalette </center></header>
-                <center><button id = "login">Log In</button></center>
+                <center><button id = "login" alt="Sign In Button">Sign In</button></center>
                 
-                <center> <button id = "sign up">Sign Up</button></center>
+                <center> <button id = "sign up" alt="Sign Up Button">Sign Up</button></center>
                 <script>
                     // JavaScript to handle the redirection
                     document.getElementById('login').onclick = function() {
-                        window.location.href = 'login.html';
+                        window.location.href = 'sign_in.html';
                     };
                        document.getElementById('sign up').onclick = function() {
                         window.location.href = 'signup.html';
