--- a/sign_in.html
+++ b/sign_in.html
@@ -1,19 +1,20 @@
 <DOCTYPE html>
     <html lang="en">
         <head>
+            
             <meta charset="UTF-8">
             <title> Log In</title>
-            <link rel="stylesheet" href="login.css">
+            <link rel="stylesheet" href="sign_in.css">
             <body>
                 <img src = "logo.png"></img>
                 <header> <center> Log In </center></header></center
 
                 <label for="input1">Username:</label>
-                <input type="text" id="input1" name="input1" placeholder="Enter username">
+                <input type="text" id="input1" name="input1" alt="Enter your username" placeholder="Enter username">
 
-                <input type="text" id="input2" name="input1" placeholder="Enter password">
+                <input type="text" id="input2" name="input1" alt="Enter your password" placeholder="Enter password">
 
-                <button id="login_button">Log In </button>
+                <button id="login_button">Sign In </button>
 
                 <button id="back_button">Back</button>
                 <script>
