--- a/home.html
+++ b/home.html
@@ -111,7 +111,7 @@
               </div>
             </div>
           </div>
-          <button class="home-btn" onclick="window.location.href='login.html';">Sign Out</button>
+          <button class="home-btn" onclick="window.location.href='index.html';">Sign Out</button>
         </div>
       </div>
 
