trying to fix build failure

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
                 <img src = "logo.png" alt="PalPalette Logo"></img>
                 <header> <center> PalPalette </center></header>
                 <center><button id = "login" alt="Sign In Button">Sign In</button></center>
-                
+
                 <center> <button id = "sign up" alt="Sign Up Button">Sign Up</button></center>
                 <script>
                     // JavaScript to handle the redirection
                     document.getElementById('login').onclick = function() {
-                        window.location.href = 'sign_in.html';
+                        window.location.href = 'signin.html';
                     };
                        document.getElementById('sign up').onclick = function() {
                         window.location.href = 'signup.html';
